--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
             <a href="index.html#us">Us<div class="detail"></div></a>
             <a href="index.html#team">Team<div class="detail"></div></a>
             <a href="index.html#pricing">Pricing<div class="detail"></div></a>
+            <a href="index.html#contact">Contact<div class="detail"></div></a>
             <a href="projects.html" class="current">Projects<div class="detail"></div></a>
 
         </div>
