--- a/en/index.html
+++ b/en/index.html
@@ -432,7 +432,7 @@
 
     <div style="height: 150px;"></div>
     <footer>
-        <a href="../es/index.html" class="idiom">
+        <a href="../es" class="idiom">
             <img src="../images/flags/usa-flag.png">
             <p>ESP / <span>ENG</span></p>
         </a>
