--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <script>
   var language = window.navigator.userLanguage || window.navigator.language;
   if(language=="es"){
-      window.location.href = "es/index.html"
+      window.location.href = "es"
   }else{
-    window.location.href = "en/index.html"
+    window.location.href = "en"
   }
 </script>
 
