--- a/en/projects.html
+++ b/en/projects.html
@@ -53,7 +53,7 @@
                 <div class="service not"><img src="../images/services/apple-w.png"></div>
                 <div class="service not"><img src="../images/services/android-w.png"></div>
                 <p>Sonograph CRM is a web system developed with HTML, CSS, JAVASCRIPT, PHP AND MYSQL.</p>
-                <p>The System manage sonograph employees productions, as designer that know when they work will be done and the sellers that have a quote generator. When the quote is confirm its sends to the designers who have less asignment.</p>
+                <p>This system manages employees’ work assignments, keeping track of time invested per project. Likewise, sellers have a quote and task generator, which is automatically assigned to the designers according to their workload. </p>
                 <p>
                     <bold>core functionalities:</bold>
                 </p>
@@ -111,7 +111,7 @@
                 <div class="service "><img src="../images/services/apple-w.png"></div>
                 <div class="service "><img src="../images/services/android-w.png"></div>
                 <p>CONACOMEE is an iOS and Android app that connects with a web admin.</p>
-                <p>This app displays the conferences that are schedule for each day, also it handles products, other events, sponsorship, courses, and many more!</p>
+                <p>This iOS and Android app is managed through a web portal. The app displays the conferences that are scheduled for each day, it handles products, events, sponsorship, courses, and many more!</p>
                 <p>
                     <bold>core functionalities:</bold>
                 </p>
@@ -169,7 +169,7 @@
                 <div class="service not"><img src="../images/services/apple-w.png"></div>
                 <div class="service not"><img src="../images/services/android-w.png"></div>
                 <p>Paper Plus is an E-Commerce that was built for Web.</p>
-                <p>This E-Commerce's principal feature is that you can design all the products they sell; from text to images. Every change has a weight on the final price. As any E-Commerce you can track your purchases and save them for later. Something unique is that this services connects with FedEx to immediately deliver the package to the final user</p>
+                <p>This e-Commerce's principal feature is the functionality to personalize all the products they sell, with text or images. Every change has a weight on the final price, and as any e-Commerce, you can track your purchases and save them for later. Something unique is that this page connects to FedEx to immediately deliver the package to the final user.</p>
                 <p>
                     <bold>core functionalities:</bold>
                 </p>
@@ -189,7 +189,7 @@
                 <div class="service not"><img src="../images/services/apple-w.png"></div>
                 <div class="service not"><img src="../images/services/android-w.png"></div>
                 <p>Skybox is a VR Game that works with the HTC Vive.</p>
-                <p>This game is an inmersive experience, where the sanse take action and you feel the wind, the ground, and all the objetcs in the virtual world as part of reality.</p>
+                <p>This game is an inmersive experience, where senses take action and you feel the wind, the ground, and all the objetcs in the virtual world as part of reality.</p>
                 <p>The goal of the game is to trick your senses as you solve simple puzzles that requiere real motion with the HTC controllers.</p>
                 <p>
                     <bold>core functionalities:</bold>
