--- a/es/projects.html
+++ b/es/projects.html
@@ -53,7 +53,7 @@
                 <div class="service not"><img src="../images/services/apple-w.png"></div>
                 <div class="service not"><img src="../images/services/android-w.png"></div>
                 <p>Sonograph CRM es un sistema web desarrollado en HTML, CSS, JAVASCRIPT, PHP AND MYSQL .</p>
-                <p>El sistema ayuda a los empleados de Sonograph a saber cuando su trabajo sera completado. Por su parte los vendedores tienen un generador de trabajos, al momento de realizar uno, se le asigna a al diseñador con menos trabajo.</p>
+                <p>Este sistema ayuda a los empleados de Sonograph a manejar el tiempo en el que sus trabajos asignados serán completados. Por otro lado, los vendedores cuentan con un generador de trabajos, el cual automáticamente asigna el proyecto a los diseñadores dependiendo la carga de trabajo que tengan.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
@@ -74,8 +74,7 @@
             <div class="service not"><img src="../images/services/videogames-w.png"></div>
             <div class="service"><img src="../images/services/apple-w.png"></div>
             <div class="service"><img src="../images/services/android-w.png"></div>
-            <p>Dancerito es una plataforma web/movil para comprar boletos.</p>
-            <p>Hecha utilizando flutter, esta app ayuda a los usuarios a comprar boletos para eventos de baile cerca de ellos. Esta app es completamente funcional en web. Donde se tiene una pasarela de pagos para la compra de boletos.</p>
+            <p>Dancerito es una plataforma web y móvil, la cual permite a los usuarios conocer los congresos de baile cercanos a su ubicación, así como comprar entradas para los mismos. Hecha utilizando flutter, esta app es completamente funcional en web, y cuenta con una pasarela de pagos para la compra de boletos.</p>
             <p>
                 <bold>Funcionalidades Clave:</bold>
             </p>
@@ -110,8 +109,8 @@
                 <div class="service not"><img src="../images/services/videogames-w.png"></div>
                 <div class="service "><img src="../images/services/apple-w.png"></div>
                 <div class="service "><img src="../images/services/android-w.png"></div>
-                <p>CONACOMEE es un app para iOS y android que se conecta con un administrador Web</p>
-                <p>Esta app tiene una serie de funcionalidades. Sirve como conexión para los clientes de CONACOMEE para subir productos, cursos, revistas, eventos, entre muchos otros. Por otra parte tiene una seccion para las conferencias actuales que la CONACOMEE realiza.</p>
+                <p>CONACOMEE es un app para iOS y Android que puede administrarse mediante un portal web.</p>
+                <p>Esta app tiene una gran variedad de funcionalidades: Sirve como conexión para los usuarios y socios de CONACOMEE para subir y visualizar productos, cursos, revistas, eventos, entre muchos otros; cuenta con una sección para las conferencias actuales que la CONACOMEE realiza; publicación de actividad de CONACOMEE.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
@@ -132,8 +131,8 @@
             <div class="service not"><img src="../images/services/videogames-w.png"></div>
             <div class="service"><img src="../images/services/apple-w.png"></div>
             <div class="service"><img src="../images/services/android-w.png"></div>
-            <p>CONACOMEE es un app para iOS y android que se conecta con un administrador Web</p>
-            <p>Funciona como un itinerario de comidas y ejercicio para usuarios del gimasio. Este itinerario es manejado por un administrador web, donde se puede los usuarios pueden pagar su membresia y sus chequeos mensuales.</p>
+            <p>Evolution Fitness es un app para iOS y android que se conecta con un administrador web. </p>
+            <p>Funciona como un medio para llevar un registro e itinerario de comidas, así como planes de rutinas para usuarios del gimasio. Los usuarios pueden pagar su membresía y agendar seguimientos con el nutriólogo o entrenador. Todo esto es manejado por un administrador web, el cual personaliza los planes para los usuarios.</p>
             <p>
                 <bold>Funcionalidades Clave:</bold>
             </p>
@@ -168,8 +167,7 @@
                 <div class="service not"><img src="../images/services/videogames-w.png"></div>
                 <div class="service not"><img src="../images/services/apple-w.png"></div>
                 <div class="service not"><img src="../images/services/android-w.png"></div>
-                <p>Paper Plus is an E-Commerce that was built for Web.</p>
-                <p>Este E-Commerce te permite personalizar los productos, con texto e imagenes. Cada cambio tiene un peso en el precio final. Como un E-Commerce puedes revisar tus compras y salvarlas para despue´s. Algo único es que se conecta con Fedex, para enviar los productos al usuario.</p>
+                <p>Este e-Commerce permite a sus usuarios personalizar productos con texto e imágenes de acuerdo a sus necesidades, lo cual va generando un cambio en el precio final de los productos a comprar. Cuenta con la función de revisar y guardar pedidos para revisar después. La página se conecta con FedEx para realizar los envíos de órdenes de los clientes.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
@@ -189,11 +187,11 @@
                 <div class="service not"><img src="../images/services/apple-w.png"></div>
                 <div class="service not"><img src="../images/services/android-w.png"></div>
                 <p>Skybox es un juego de realidad virtual que funciona con el HTC Vive.</p>
-                <p>Este juego es una experiensa inmersiva, donde los sentidos y el juego interactuan para brindar una experiencia que te llevara a los limites. Los objetos del juego se pueden sentir en la realidad.</p>
+                <p>Este juego es una experiensa inmersiva, donde los sentidos y el juego interactúan para brindar al usuario una experiencia que lo llevará a los limites. Los objetos del juego se pueden sentir en la realidad.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
-                <p>Contaacto con los objetos del juego y la realidad, mediante el HTC Vive</p>
+                <p>Contacto con los objetos del juego y la realidad mediante el HTC Vive.</p>
 
             </div>
             <div class="col-b" data-tilt data-tilt-full-page-listening data-tilt data-tilt-max="3" data-tilt-reverse="true" data-tilt-perspective="500000">
@@ -223,7 +221,7 @@
                 <div class="service"><img src="../images/services/apple-w.png"></div>
                 <div class="service"><img src="../images/services/android-w.png"></div>
                 <p>Wknbuy es una app desarrollada para iOS y Android con un administrador web.</p>
-                <p> En Wknbuy un administrador desde su computadora o teléfono puede registrar el precio, cantidad y puntos que una promocion tiene. Tambien puede determinar cuando abre o cierra una venta, por ciudad. El usuario puede comprar las varias promociones mediante pagos con tarjeta o con puntos.</p>
+                <p>Permite al administrador, desde su computadora o teléfono, registrar el precio, cantidad y puntos que una promoción tiene. Asimismo, puede determinar cuándo abre o cierra una venta, por ciudad. El usuario puede comprar las promociones mediante pagos con tarjeta o con puntos.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
@@ -242,8 +240,8 @@
                 <div class="service not"><img src="../images/services/videogames-w.png"></div>
                 <div class="service"><img src="../images/services/apple-w.png"></div>
                 <div class="service"><img src="../images/services/android-w.png"></div>
-                <p>Mr. Pampas es una app desarrollada para iOS y Android</p>
-                <p>Esta app ofrece una vista al menu del restaurante, e incluye la ubicación de todos los locales que hay en México junto con su información de contacto. La app tambien incluye una tarjeta de visitas. Cuando juntas tres visitas se te otorga un premio especial dictado desde la app.</p>
+                <p>Mr. Pampas es una app desarrollada para iOS y Android.</p>
+                <p>Esta app ofrece la visualización del menú del restaurante, e incluye la ubicación y contacto de todos los establecimientos que hay en México. La app también incluye una tarjeta de visitas para el cliente frecuente, la cual al juntar tres visitas otorga un premio especial al cliente.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
@@ -277,8 +275,8 @@
                 <div class="service not"><img src="../images/services/videogames-w.png"></div>
                 <div class="service"><img src="../images/services/apple-w.png"></div>
                 <div class="service"><img src="../images/services/android-w.png"></div>
-                <p>Mr. Pampas es una app desarrollada para iOS y Android</p>
-                <p>En Wknfly, se resuelve el problema de que te salten en la fila. Te llaman desde la aplicación de hostess, donde te llega una notificación a tu telefono. Tambien si no quieres hacer la fila, cuenta con un plan para pagar un extra y ser el siguiente en la fila.</p>
+                <p>WKNFLY es una app desarrollada para iOS y Android.</p>
+                <p>Wknfly resuelve el problema de que te salten en la fila del restaurante, permitiendo al usuario generar reservaciones. La aplicación de hostess permite enviar una notificación al teléfono del cliente cuando sea su turno. Esta aplicación acepta pagos cuando el restaurante lo requiera.</p>
                 <p>
                     <bold>Funcionalidades Clave:</bold>
                 </p>
