--- a/en/index.html
+++ b/en/index.html
@@ -436,7 +436,7 @@
             <img src="../images/flags/usa-flag.png">
             <p>ESP / <span>ENG</span></p>
         </a>
-        <p><a style="opacity: .5; margin-right: 20px;" href="tel:6623290233">Tel: 662-329-0233</a>INOWU © 2020</p>
+        <p><a style=" margin-right: 20px;" href="tel:6623290233">Tel: 662-329-0233</a>INOWU © 2020</p>
     </footer>
 
     <script type="text/javascript" src="../scripts/jquery-1.11.0.min.js"></script>
