--- a/es/index.html
+++ b/es/index.html
@@ -308,7 +308,7 @@
     <footer><a href="../en" class="idiom"><img src="../images/flags/mex-flag.png">
             <p><span>ESP</span> / ENG  </p>
         </a>
-        <p><a style="opacity: .5; margin-right: 20px;" href="tel:6623290233">Tel: 662-329-0233</a>INOWU © 2020</p>
+        <p><a style="opacity: 1; margin-right: 20px;" href="tel:6623290233">Tel: 662-329-0233</a>INOWU © 2020</p>
     </footer>
     <script type="text/javascript" src="../scripts/jquery-1.11.0.min.js"> </script>
     <script type="text/javascript" src="../scripts/general.js"></script>
