--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
     <meta name="msapplication-TileImage" content="./images/favicon/ms-icon-144x144.png" />
 </head>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-163418090-1');
+</script>
 <script>
   var language = window.navigator.userLanguage || window.navigator.language;
   if(language=="es"){
