--- a/es/index.html
+++ b/es/index.html
@@ -49,7 +49,7 @@
         <div id="promo-text" data-aos="fade-right" data-aos-duration="2000">
             <h2>Listo</h2>
             <p>para tener</p>
-            <p class="spacing">tu nueva</p>
+            <p class="spacing">tu</p>
             <div class="projects">
                 <div>
                     <h1>Página Web</h1>
