--- a/es/index.html
+++ b/es/index.html
@@ -55,7 +55,7 @@
                     <h1>Página Web</h1>
                 </div>
                 <div>
-                    <h1>Videojuego</h1>
+                    <h1>Juego</h1>
                 </div>
                 <div>
                     <h1>Sistema</h1>
