--- a/es/index.html
+++ b/es/index.html
@@ -63,7 +63,7 @@
                 <div>
                     <h1>Aplicación</h1>
                 </div>
-            </div><a class="clear-button" href="#pricing">Calcula el precio</a>
+            </div><a class="clear-button" href="#pricing">Siguiente paso</a>
         </div>
         <img data-aos="fade-right" data-aos-offset="-300" data-aos-duration="2000" class="devices"
             src="../images/devices.png">
@@ -280,9 +280,9 @@
     </div>
     <div class="col end" data-aos="fade-up" data-aos-offset="1000">
         <form action="https://formspree.io/kevin_w97@hotmail.com" target="_blank" method="POST">
-            <p class="subtitle">Tu app costara (aproximadamente)... </p>
+            <!-- <p class="subtitle">Tu app costara (aproximadamente)... </p>
             <h1 class="price" id="price"></h1>
-            <p class="subtitle w">Este es un estimado, puede variar dependiendo de otros factores.</p>
+            <p class="subtitle w">Este es un estimado, puede variar dependiendo de otros factores.</p> -->
             <p class="title">Bingo, solo nos falta tu nombre y correo, nosotros te contactaremos para saber más detu
                 app.<input class="text" type="text" name="name" required placeholder="Name: "><input class="text"
                     type="email" name="correo" required placeholder="E-mail: "><input id="answers" value=""
