--- a/en/index.html
+++ b/en/index.html
@@ -420,7 +420,7 @@
     <div  id="contact" class="row">
             <form class="col-12" action="https://formspree.io/kevin_w97@hotmail.com" target="_blank" method="POST">
                 <h1>Contact Us</h1>
-                <a class="button call" href="tel:6623290233">Call Us!</a> 
+                <a class="button call" href="tel:5216623290233">Call Us!</a> 
 
                 <p class="title">We'd love to hear your ideas, please feel free to contact us!</p>                
                 <input class="text" type="text" name="name" required placeholder="Name: ">
@@ -436,7 +436,7 @@
             <img src="../images/flags/usa-flag.png">
             <p>ESP / <span>ENG</span></p>
         </a>
-        <p><a style="opacity: 1; margin-right: 20px;" href="tel:+526623290233">Tel: (+52)662-329-0233</a>INOWU © 2020</p>
+        <p><a style="opacity: 1; margin-right: 20px;" href="tel:+525216623290233">Tel: (+52 1)662-329-0233</a>INOWU © 2020</p>
     </footer>
 
     <script type="text/javascript" src="../scripts/jquery-1.11.0.min.js"></script>
