--- a/en/index.html
+++ b/en/index.html
@@ -393,6 +393,7 @@
                 <p class="title">We'd love to hear your ideas, please feel free to contact us!</p>
                 <input class="text" type="text" name="name" required placeholder="Name: ">
                 <input class="text" type="email" name="correo" required placeholder="E-mail: ">
+                <input class="text" type="tel" name="telefono" required placeholder="Cellphone: ">
                 <textarea class="text" rows="7"  name="comentarios" required placeholder="Ideas"></textarea>
                 <input class="button" type="submit" value="Lets' develop!">
             </form>
@@ -407,9 +408,10 @@
                 <p class="title">Bingo! The next step is to leave us your information and we will contact you to follow up on your project.</p>
                 <input class="text" type="text" name="name" required placeholder="Name: ">
                 <input class="text" type="email" name="correo" required placeholder="E-mail: ">
+                <input class="text" type="tel" name="telefono" required placeholder="Cellphone: ">
                 <input id="answers" value="" class="invisible" name="answers">
                 <input id="price2" class="invisible" name="price">
-                <textarea class="text" rows="7"  name="comentarios" placeholder="Comments"></textarea>
+                <textarea class="text" rows="7"  name="comentarios" required placeholder="Comments"></textarea>
                 <input class="button" type="submit" value="Lets' develop!">
             </form>
         </div>
@@ -425,7 +427,10 @@
                 <p class="title">We'd love to hear your ideas, please feel free to contact us!</p>                
                 <input class="text" type="text" name="name" required placeholder="Name: ">
                 <input class="text" type="email" name="correo" required placeholder="E-mail: ">
+                <input class="text" type="tel" name="telefono" required placeholder="Cellphone: ">
+
                 <textarea class="text" rows="7"  name="comentarios" required placeholder="Ideas"></textarea>
+
                 <input class="button" type="submit" value="Lets' develop!">
             </form>
         </div>
