--- a/es/index.html
+++ b/es/index.html
@@ -272,10 +272,12 @@
     </div>
     <div class="row option isAn Otro">
         <form class="col-12" action="https://formspree.io/kevin_w97@hotmail.com" target="_blank" method="POST">
-            <p class="title">Nos encanta oír tus ideas, ¡Contáctanos!</p><input class="text" type="text" name="name"
-                required placeholder="Name: "><input class="text" type="email" name="correo" required
-                placeholder="E-mail: "><textarea class="text" rows="7" name="comentarios" required
-                placeholder="Ideas"></textarea><input class="button" type="submit" value="¡Desarrollemos tu proyecto!">
+            <p class="title">Nos encanta oír tus ideas, ¡Contáctanos!</p>
+            <input class="text" type="text" name="name" required placeholder="Name: ">
+            <input class="text" type="email" name="correo" required placeholder="E-mail: ">
+            <input class="text" type="tel" name="telefono" required placeholder="Celular: ">
+            <textarea class="text" rows="7" name="comentarios" required placeholder="Ideas"></textarea>
+            <input class="button" type="submit" value="¡Desarrollemos tu proyecto!">
         </form>
     </div>
     <div class="col end" data-aos="fade-up" data-aos-offset="1000">
@@ -284,11 +286,14 @@
             <h1 class="price" id="price"></h1>
             <p class="subtitle w">Este es un estimado, puede variar dependiendo de otros factores.</p> -->
             <p class="title">Bingo, solo nos falta tu nombre y correo, nosotros te contactaremos para saber más detu
-                app.<input class="text" type="text" name="name" required placeholder="Name: "><input class="text"
-                    type="email" name="correo" required placeholder="E-mail: "><input id="answers" value=""
-                    class="invisible" name="answers"><input id="price2" class="invisible" name="price"><textarea
-                    class="text" rows="7" name="comentarios" placeholder="Comments"></textarea><input class="button"
-                    type="submit" value="¡Desarrollemos tu proyecto!">
+                app.
+                <input class="text" type="text" name="name" required placeholder="Name: ">
+                <input class="text"type="email" name="correo" required placeholder="E-mail: ">
+                <input class="text" type="tel" name="telefono" required placeholder="Celular: ">
+                <input id="answers" value="" class="invisible" name="answers">
+                <input id="price2" class="invisible" name="price">
+                <textarea class="text" rows="7" name="comentarios" placeholder="Comments"></textarea>
+                <input class="button" type="submit" value="¡Desarrollemos tu proyecto!">
         </form>
     </div>
     </div>
@@ -298,9 +303,11 @@
 
             <a class="button call" href="tel:5216623290233">¡Llámanos!</a>
             <p class="title">Nos encanta oír tus ideas, ¡Contáctanos!</p>
-            <input class="text" type="text" name="name" required placeholder="Name: "><input class="text" type="email"
-                name="correo" required placeholder="E-mail: "><textarea class="text" rows="7" name="comentarios"
-                required placeholder="Ideas"></textarea><input class="button" type="submit" value="¡Desarrollemos tu proyecto!">
+            <input class="text" type="text" name="name" required placeholder="Name: ">
+            <input class="text" type="email" name="correo" required placeholder="E-mail: ">
+            <input class="text" type="tel" name="telefono" required placeholder="Celular: ">
+            <textarea class="text" rows="7" name="comentarios" required placeholder="Ideas"></textarea>
+            <input class="button" type="submit" value="¡Desarrollemos tu proyecto!">
         </form>
     </div>
     <div style="height: 150px;"></div>
