--- a/es/index.html
+++ b/es/index.html
@@ -292,7 +292,7 @@
                 <input class="text" type="tel" name="telefono" required placeholder="Celular: ">
                 <input id="answers" value="" class="invisible" name="answers">
                 <input id="price2" class="invisible" name="price">
-                <textarea class="text" rows="7" name="comentarios" placeholder="Comments"></textarea>
+                <textarea class="text" rows="7" name="comentarios" required placeholder="Comments"></textarea>
                 <input class="button" type="submit" value="¡Desarrollemos tu proyecto!">
         </form>
     </div>
