--- a/en/index.html
+++ b/en/index.html
@@ -439,7 +439,7 @@
     <footer>
         <a href="../es" class="idiom">
             <img src="../images/flags/usa-flag.png">
-            <p>ESP / <span>ENG</span></p>
+            <p><span>ENG</span></p>
         </a>
         <p><a style="opacity: 1; margin-right: 20px;" href="tel:+525216623290233">Tel: (+521) 662-329-0233</a>INOWU © 2020</p>
     </footer>
