--- a/es/index.html
+++ b/es/index.html
@@ -313,7 +313,7 @@
     <div style="height: 150px;"></div>
 
     <footer><a href="../en" class="idiom"><img src="../images/flags/mex-flag.png">
-            <p><span>ESP</span> / ENG  </p>
+            <p><span>ESP</span></p>
         </a>
         <p><a style="opacity: 1; margin-right: 20px;" href="tel:5216623290233">Tel: 662-329-0233</a>INOWU © 2020</p>
     </footer>
