--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   if(language=="es"){
       window.location.href = "es"
   }else{
-    window.location.href = "en"
+    window.location.href = "es"
   }
 </script>
 
