--- a/en/index.html
+++ b/en/index.html
@@ -178,7 +178,7 @@
             <div class="col" data-aos="fade-up" data-aos-offset="100">
                 <img src="../images/avatars/kevin.png">
                 <h3>Kevin Adriel Woolfolk</h3>
-                <p>CEO</p>
+                <p>CEO/MOMEGG</p>
             </div>
             <div class="col" data-aos="fade-up" data-aos-offset="100">
                 <img src="../images/avatars/alejandro.png">
